--- a/global.yaml
+++ b/global.yaml
@@ -60,8 +60,8 @@ Resources:
           Mutable: true
       AutoVerifiedAttributes:
         - email
+      EmailVerificationSubject: 'Your verification code for EC2Ensemble'
       EmailVerificationMessage: 'Your verification code is {####}'
-      EmailVerificationSubject: 'Your verification code for PCMA-CIC'
       Policies:
         PasswordPolicy:
           MinimumLength: 8
