--- a/AWSCloudFormationStackSetAdministrationRole.yml
+++ b/AWSCloudFormationStackSetAdministrationRole.yml
@@ -24,4 +24,4 @@ Resources:
                 Action:
                   - sts:AssumeRole
                 Resource:
-                  - "arn:*:iam::*:role/AWSCloudFormationStackSetExecutionRole"
+                  - 'arn:*:iam::*:role/AWSCloudFormationStackSetExecutionRole'
