--- a/global.yaml
+++ b/global.yaml
@@ -278,12 +278,15 @@ Resources:
               Action:
                 - ec2:RunInstances
                 - ec2:CreateTags
-                - ssm:GetParameter
               Resource: '*'
             - Effect: Allow
               Action:
                 - iam:PassRole
               Resource: !Sub 'arn:aws:iam::${AWS::AccountId}:role/*'
+            - Effect: Allow
+              Action:
+                - ssm:GetParameter
+              Resource: !Sub 'arn:aws:ssm:*:${AWS::AccountId}:parameter/${AWS::StackName}/*'
       Environment:
         Variables:
           instanceProfileName: !Ref EC2InstanceProfile
@@ -413,6 +416,7 @@ Resources:
   UserServerTable:
     Type: AWS::DynamoDB::Table
     Properties:
+      BillingMode: PAY_PER_REQUEST
       AttributeDefinitions:
         - AttributeName: user
           AttributeType: S
@@ -423,9 +427,6 @@ Resources:
           KeyType: HASH
         - AttributeName: serverId
           KeyType: RANGE
-      ProvisionedThroughput:
-        ReadCapacityUnits: 5
-        WriteCapacityUnits: 5
 
   WebSocketConnectionsTable:
     Type: AWS::DynamoDB::Table
