AWSCloudformationStackSetExecutionRole.yml no longer requires param, change to WebSocketConnectionsTable billing mode

--- a/global.yaml
+++ b/global.yaml
@@ -431,6 +431,7 @@ Resources:
   WebSocketConnectionsTable:
     Type: AWS::DynamoDB::Table
     Properties:
+      BillingMode: PAY_PER_REQUEST
       AttributeDefinitions:
         - AttributeName: user
           AttributeType: S
@@ -448,12 +449,6 @@ Resources:
               KeyType: RANGE
           Projection:
             ProjectionType: ALL
-          ProvisionedThroughput:
-            ReadCapacityUnits: 5
-            WriteCapacityUnits: 5
-      ProvisionedThroughput:
-        ReadCapacityUnits: 5
-        WriteCapacityUnits: 5
       TimeToLiveSpecification:
         AttributeName: expiration
         Enabled: true
