--- a/AWSCloudFormationStackSetExecutionRole.yml
+++ b/AWSCloudFormationStackSetExecutionRole.yml
@@ -1,13 +1,6 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: Configure the AWSCloudFormationStackSetExecutionRole to enable use of your account as a target account in AWS CloudFormation StackSets.
 
-Parameters:
-  AdministratorAccountId:
-    Type: String
-    Description: AWS Account Id of the administrator account (the account in which StackSets will be created).
-    MaxLength: 12
-    MinLength: 12
-
 Resources:
   ExecutionRole:
     Type: AWS::IAM::Role
@@ -19,7 +12,7 @@ Resources:
           - Effect: Allow
             Principal:
               AWS:
-                - !Ref AdministratorAccountId
+                - !Ref AWS::AccountId
             Action:
               - sts:AssumeRole
       Path: /
